AUTOMAKE_OPTIONS = foreign 1.9

ACLOCAL_AMFLAGS = -I m4

include_HEADERS = \
    silc_common.h

silcincludedir = $(includedir)/silc_common

silcinclude_HEADERS = \
    silc_common/silc_array.h \
    silc_common/silc_cpp.h \
    silc_common/silc_file.h \
    silc_common/silc_htbl.h \
    silc_common/silc_list.h \
    silc_common/silc_logging.h \
    silc_common/silc_mem.h \
    silc_common/silc_math.h \
    silc_common/silc_ring_buffer.h \
    silc_common/silc_sem.h \
    silc_common/silc_socket.h \
    silc_common/silc_str.h \
    silc_common/silc_time.h \
    silc_common/silc_dbg.h \
    silc_common/silc_stats.h \
    silc_common/silc_cpu.h \
    silc_common/silc_types.h \
    silc_common/silc_thread.h \
    silc_common/silc_gpio.h
    
	
